data/derived/sp14/progs/unify/prog2639.ml.out
Characters 109-110:
  then c :: s
            ^
Error: This expression has type bool but an expression was expected of type
         'a list
